--- a/src/pages/Index/Index.css
+++ b/src/pages/Index/Index.css
@@ -1,3 +1,94 @@
-.logo-index{
-  height: 80px;
+.row{
+  padding: 20px 0;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.index-title{
+  color: #B8860B;
+  font-weight: bold;
+  font-size: 40px;
+  text-align: left;
+}
+
+.index-text{
+  color: black;
+  font-weight: bold;
+  font-size: 22px;
+  text-align: left;
+}
+
+.index-title2{
+  color: #B8860B;
+  font-weight: bold;
+  font-size: 40px;
+  text-align: left;
+}
+
+.index-text2{
+  color: black;
+  font-weight: bold;
+  font-size: 22px;
+  text-align: left;
+}
+
+.img-carousel {
+  height: 300px;
+  width: 300px;
+}
+
+.cards-section{
+  padding-top: 50px;
+}
+
+@media only screen and (min-width: 520px ){   
+  .row{
+    padding: 20px 0;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .index-title{
+    color: #B8860B;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+  }
+  
+  .index-text{
+    font-weight: bold;
+    font-size: 30px;
+    text-align: center;
+    padding: 0 200px;
+    line-height: 40px;
+  }
+
+  .index-title2{
+    color: #B8860B;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: left;
+  }
+  
+  .index-text2{
+    font-weight: bold;
+    font-size: 30px;
+    text-align: left;
+    line-height: 40px;
+  }
+
+  .carousel{
+    width: 800px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .img-carousel {
+    height: 500px;
+  }
+
+  .cards-section{
+    padding-top: 50px;
+  }
+
 }
