--- a/src/pages/Index/components/Card/Card.css
+++ b/src/pages/Index/components/Card/Card.css
@@ -1,6 +1,6 @@
 .card-container{
   max-width: 100%;
-  height: 230px;
+  height: 200%px;
   border-radius: 10px;
   padding: 20px;
   margin-bottom: 30px;
@@ -22,6 +22,7 @@
   font-weight: bold;
   font-size: 30px;
   text-align: left;
+  width: 60%;
 }
 
 .card-text p{
