--- a/src/pages/Event/Event.css
+++ b/src/pages/Event/Event.css
@@ -1,8 +1,3 @@
-.row{
-  padding: 20px 0;
-  padding-left: 30px;
-  padding-right: 30px;
-}
 
 .image-container{
   margin: 0;
@@ -11,6 +6,9 @@
 
 .image-container img{
   width: 100%;
+}
+.ctn--newEvent{
+  margin-top: 4.25rem;
 }
 
 h2{
@@ -30,16 +28,29 @@ h2{
   margin-right: 10px;
 }
 
-.event-form label{
-  font-size: 20px;
+.ctn--newEvent .event-form label{
+  font-size: 1rem;
   margin-bottom: 0px;
+  display: inline-block;
+  width: auto;
+}
+.ctn--newEvent .event-form .icon-container{
+  display: inline-block;
+  width: auto;
+  margin-right: 0;
 }
 
 .event-form input{
   height: 40px;
   width: 100%;
   margin-bottom: 15px;
+  margin-top: .5rem;
 }
+.event-form img{
+  max-width: 24px;
+  max-height: 30px;
+}
+
 
 .button{
   padding-top: 30px;
@@ -77,8 +88,7 @@ h2{
     margin-right: 10px;
   }
   
-  .event-form label{
-    font-size: 20px;
+  .ctn--newEvent .event-form label{
     margin-bottom: 0px;
     width: 40%;
   }
