--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,6 +16,8 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 2;
+    box-shadow: 0 10px 10px rgba(68, 31, 125, .1);
 }
 .movil__header{
   display: block;
@@ -29,8 +31,8 @@
   right: 0;
   padding: .5rem 1rem;
   margin-left: 0;
-  box-shadow: 0 0 10px rgba(0,0,0,.15);
   height: 68px;
+  box-shadow: 0 10px 10px rgba(68, 31, 125, .1);
 }
 .movil__header .nav{
     margin: 0;
@@ -59,12 +61,9 @@
   border: none;
   cursor: pointer;
   font-size: medium;
-  padding: 0;
+  padding: .25rem;
 }
-.Menu-button:hover {
-    border-color: #B8860B;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
+
 .Menu-button:focus {
     outline: none;
 }
@@ -83,30 +82,37 @@
     text-align: left;
     list-style-type: disc;
     margin: 0;
-    padding: 20px;
 }  
 .nav li a {
-      color: black;
-      text-align: center;
-      padding: 0;
-      text-decoration: none;
-      text-align: left;
-      font-size: 1rem;
-      margin: auto;
+    font-size: 1rem;
+    line-height: 60px;
+    margin-left: 1rem;
+    transition: all linear .25s;
+    color: #441f7d;
+    font-weight: 400;
     }
 .nav li{
       list-style-type: none;
       margin: 2px;
   }
-.nav li a:hover{
-      border-bottom-style: solid;
-      border-color: darkorange;
-      cursor: pointer;
-      text-decoration: none;
-  }
 .logo{
     max-width: 140px;
     max-height: 120px;
+}
+.nav__link{
+    font-size: 1rem;
+    line-height: 60px;
+    margin-left: 1rem;
+    transition: all linear .25s;
+    color: #441f7d;
+    font-weight: 400;
+}
+.nav__link:hover{
+    color: #7342BF;
+}
+.desktop__header .nav{
+    padding-left: 0;
+    padding-right: 0;
 }
 @media only screen and (min-width: 768px) {
     .desktop__header {
@@ -125,10 +131,8 @@
     }
     
     .nav{
-        box-shadow: 0 10px 20px rgba(0,0,0,0.19);
         width: 100%;
         margin: 0;
-        padding:0 2rem !important;
     }
     .nav li a {
         padding: 16px;
