--- a/src/pages/Index/Index.css
+++ b/src/pages/Index/Index.css
@@ -1,14 +1,8 @@
-.row{
-  padding: 20px 0;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin: 0;
-}
 
 .index-title{
-  color: #B8860B;
+  color: #7342BF;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 2.5rem;
   text-align: left;
 }
 
@@ -20,14 +14,13 @@
 }
 
 .index-title2{
-  color: #B8860B;
+  color: #7342BF;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 2.5rem;
   text-align: left;
 }
 
 .index-text2{
-  color: black;
   font-weight: bold;
   font-size: 22px;
   text-align: left;
@@ -38,58 +31,34 @@
   width: 300px;
 }
 
-.cards-section{
-  padding-top: 50px;
+.slide__image{
+  width: 100%;
+}
+.heroimage{
+  width: 100%;
+  height: 500px;
+  display: inline-block;
+  background-image: url('../../img/slide_1.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+.ctn__index{
+  max-width: 100%;
+  margin-top: 64px;
+  width: 100%;
+}
+.back__pink{
+  background-color: rgba(187,161,252,0.1);
+}
+.ctn__control{
+
 }
 
-@media only screen and (min-width: 520px ){   
-  .row{
-    padding: 20px 0;
-    padding-left: 70px;
-    padding-right: 70px;
+@media screen and (max-width: 1200px){
+  .cards-section,
+  .wrap__text{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
-
-  .index-title{
-    color: #B8860B;
-    font-weight: bold;
-    font-size: 40px;
-    text-align: center;
-  }
-  
-  .index-text{
-    font-weight: bold;
-    font-size: 30px;
-    text-align: center;
-    padding: 0 15%;
-    line-height: 40px;
-  }
-
-  .index-title2{
-    color: #B8860B;
-    font-weight: bold;
-    font-size: 40px;
-    text-align: left;
-  }
-  
-  .index-text2{
-    font-weight: bold;
-    font-size: 30px;
-    text-align: left;
-    line-height: 40px;
-  }
-
-  .carousel{
-    width: 800px;
-    display: flex;
-    justify-content: center;
-  }
-
-  .img-carousel {
-    height: 500px;
-  }
-
-  .cards-section{
-    padding-top: 50px;
-  }
-
 }
