--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,40 +1,19 @@
-.row{
-  padding: 20px 0;
-  padding-left: 30px;
-  padding-right: 30px;
-}
 
-.image-container{
-  padding: 30px;
+.ctn__login{
+  margin-top: 70px;
+  background-color: #f8f5fd;
+  padding-top: 2rem;
+  min-height: 95vh;
 }
-
-h2{
-  color: #B8860B;
-  font-weight: bold;
-  font-size: 40px;
-  text-align: left;
+.ctn__login  form{
+  max-width: 420px;
 }
-
-.login-form label{
-  font-size: 20px;
-  margin-bottom: 0px;
-}
-
-.login-form input{
-  height: 40px;
+.ctn__login  form input{
   width: 100%;
-  margin-bottom: 15px;
 }
-
-.forgot-pass{
-  text-align: right;
-  color: #B8860B;
-}
-
-.noAccount{
-  color: #B8860B;
-  font-weight: bold;
-  font-size: 30px;
+.ctn__login  form label{
+  font-size: 1rem;
+  margin-bottom: .25rem;
 }
 .response-message{
   width: 100%;
@@ -63,43 +42,20 @@ h2{
   background-color: #84142d;
 }
 
-@media only screen and (min-width: 520px ){
-  .row{
-    padding: 20px 0;
-    padding-left: 70px;
-    padding-right: 70px;
-  }
-
-  .image-container{
-    padding: 30px;
-  }
-  
-  h2{
-    color: #B8860B;
-    font-weight: bold;
-    font-size: 40px;
-    text-align: left;
-  }
-  
-  .login-form label{
-    font-size: 20px;
-    margin-bottom: 0px;
-  }
-  
-  .login-form input{
-    height: 40px;
-    width: 80%;
-    margin-bottom: 10px;
-  }
-  
-  .forgot-pass{
-    text-align: right;
-    color: #B8860B;
-  }
-  
-  .noAccount{
-    color: #B8860B;
-    font-weight: bold;
-    font-size: 30px;
-  }
+.login-form input{
+  line-height: 40px;
+  width: 100%;
+  margin-bottom: 15px;
+  padding-left: .5rem;
+  padding-right: .5rem;
 }
+.login-form input:focus{
+  border-color: #441f7d;
+  outline: none;
+}
+.noAccount{
+  font-weight: 400 !important;
+  font-size: 1rem !important;
+  color: rgba(0,0,0,0.87) !important;
+}
+
