--- a/src/components/HeaderEvent/HeaderEvent.css
+++ b/src/components/HeaderEvent/HeaderEvent.css
@@ -36,6 +36,7 @@
   padding-right: 1rem;
   border-bottom: 2px solid transparent;
   text-decoration: none;
+  padding-bottom: 0.25rem;
 }
 .event-btn div a:hover,
 .event-btn div a.active {
