--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ body {
   font-weight: 600;
   text-align: center;
   width: auto;
+  text-transform: uppercase;
 }
 .btn__app.large{
   width: 100%;
