--- a/src/pages/Signin/Signin.css
+++ b/src/pages/Signin/Signin.css
@@ -62,6 +62,22 @@
   margin-top: 3rem;
 }
 
+.ctn__signup input:focus {
+  border: 2px solid #441f7d;
+  border-radius: 5px;
+}
+
+.ctn__signup input {
+  height: 40px;
+  margin-bottom: 10px;
+  width: 100%;
+  border: 2px solid rgba(0,0,0,0.4);
+  border-radius: 5px;
+  outline: none;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 @media only screen and (min-width: 520px ){
   .image-container{
     padding: 30px;
