--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -6,18 +6,29 @@
     justify-content: flex-start;
     padding: auto;    
 }
-.container-body{
-    display: flex;
+.container{
+    display: block;
     align-items: center;
+}
+.container-cards{
+    display: block;
+}
+
+.container-charts{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3%;
 }
 .card{
     border: 2px solid #441f7d;
     padding: 0;
+    margin-bottom: 2%;
 }
 .card-title{
     background-color: #9e74dd;
     color: #ffffff;
     font-weight: bold;
+    text-align: center;
 }
 .container-title label{
     margin: auto;
@@ -25,4 +36,10 @@
 .card-body{
     text-align: center;
     font-size: 30px;
+}
+@media only screen and (min-width: 768px) {
+    .container-cards{
+        display: flex;
+        justify-content: space-between;
+    }
 }
