MOD Style:octocat:

--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -24,7 +24,7 @@
     padding: 0;
     margin-bottom: 2%;
 }
-.card-title{
+.ctn-dashboard .card-title{
     background-color: #9e74dd;
     color: #ffffff;
     font-weight: bold;
