--- a/src/pages/Event/Event.css
+++ b/src/pages/Event/Event.css
@@ -63,3 +63,52 @@
   padding-top: 30px;
 }
 
+.ant-picker{
+  width: 100%;
+  border: none;
+  padding-left: 0;
+  padding-right: 0;
+  outline: 0;
+}
+.ant-picker-focused{
+  border: none;
+  box-shadow: none;
+}
+.ant-picker-ok,
+.ant-picker-now{
+  width: 100%;
+}
+.ant-picker-ok button,
+.ant-picker-now a{
+  width: 100%;
+  font-size: .75rem !important;
+}
+.ant-picker-now a{
+  border: 1px solid #441f7d !important;
+  background-color: #fff;
+  color: #441f7d;
+  border: none;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: 600;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+.ant-picker-ok button{
+  background-color: #441f7d;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding-top: 0;
+  padding-bottom: 0;
+  line-height: 40px;
+  height: 40px;
+  margin-top: 1rem;
+
+}
+.ant-picker-today-btn {
+  color: #441f7d;
+}
