ADD validation Email:octocat:

--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -38,15 +38,15 @@
     border-radius: 15px;
     margin-bottom: 2%;
 }
-<<<<<<< HEAD
+
 .tab{
     color: black;
     border-radius: 5px;
-=======
+}
 .ctn-dashboard .card-title{
     background-color: #9e74dd;
     color: #ffffff;
->>>>>>> 77bfb6bb87f4afa2f6cba1f0037ba158b4752a58
+
     font-weight: bold;
     text-align:justify;
     width: 100%;
