--- a/src/pages/Guests/Guests.css
+++ b/src/pages/Guests/Guests.css
@@ -84,7 +84,9 @@
 .container-form-guests form input.is-invalid{
   border-color: #84142d;
 }
-
+.note__guest::first-letter {
+  text-transform: uppercase;
+}
 @media only screen and (min-width: 768px) {
     
   .container-guests{ 
@@ -104,6 +106,14 @@
   }
 }
 
+@media screen and (max-width:  960px) {
+  .container-guests {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 @media only screen and (max-width: 640px){
   .container-guests{
     padding-left: 0;
@@ -112,5 +122,9 @@
   .container-form-guests form{
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+  .container-form-guests{
+    padding-right: 0;
+    max-width: 100%;
   }
 }
