--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
   font-family: 'Poppins', sans-serif !important;
   
   color: rgba(0,0,0,0.87);
+  background-color: #f8f5fd !important;
 }
 
 .wrap__inner {
