--- a/src/pages/Expenses/Expenses.css
+++ b/src/pages/Expenses/Expenses.css
@@ -106,6 +106,13 @@
 .delete-expense:hover{
   cursor: pointer;
 }
+.title__restante{
+  font-size: 1.25rem;
+}
+.currency__indicator{
+  font-size: .875rem;
+}
+
 
 @media only screen and (min-width: 768px ){
 
@@ -148,5 +155,14 @@
     border-radius: 3px;
     height: 30px;
     font-size: 20px;
+  }
+  .currency__indicator{
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .ctn-eventExpenses .container-table{
+    padding: 1rem;
   }
 }
