--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -38,6 +38,7 @@
     padding: 3%;
     border-radius: 15px;
     margin-bottom: 2%;
+    display: table;
 }
 .tab{
     color: black;
@@ -56,7 +57,7 @@
     font-weight: bold;
     color:#c32dff;
 } 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
     .container-postIt{
         display: flex;
         justify-content: space-between;
